2003-05-04  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* kpse.cc (dir_list_add): Ensure that directory ends with a
	directory separator.

2003-04-30  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* pathsearch.cc: Include kpse.cc here.

	* kpse.cc: All functions are now static.  Massive surgery to
	condense kpathsearch library to a single file of just the
	essentials for Octave and convert to using C++ strings (no more
	calls to malloc, very few calls to new, so there should be much
	less potential for introducing memory leaks now).

	* Makefile.in (EXTRAS): Move kpse.cc here from
	LIBOCT_PATHSEARCH_CXX_SOURCES.

	* kpse.h, kpse-config.h: Delete.
	* Makefile.in (INCLUDES): Delete them from the list.

2003-04-26  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* str-vec.cc (string_vector::append (const std::string&),
	string_vector::append (const string_vector&)): New methods.

2003-04-24  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* kpse.cc, kpse.h: Replace fn_type with std::string.

	* lo-ieee.h (lo_ieee_signbit): Provide signbit decl for MinGW systems.

	* kpse.cc (xclosedir): Don't define or declare for Windows.
	(READABLE): Now a static function to avoid warnings from MinGW
	compiler.	

2003-04-23  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* kpse.cc: Move most functions from kpse-xfns.c here and make
	static.  Include most of kpse-xfns.h directly, removing
	unnecessary bits.

	* dMatrix.cc (Matrix::pseudo_inverse): Now const.
	* CMatrix.cc (ComplexMatrix::pseudo_inverse): Likewise.

2003-04-18  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* getopt.c, getopt1.c, getopt.h: Move here from kpathsea.
	* Makefile.in: Add them to the appropriates lists.

	* oct-getopt.c: Include "getopt.h", not <kpathsea/getopt.h>.

	* Makefile.in (liboctave.$(LIBEXT), liboctave.$(SHLEXT)): Adjust
	for new locations of kpathsea objects.
	Delete kpathsea targets.

	* pathsearch.cc (dir_path::set_program_name): Delete.

	* kpse.cc: New file.
	* Makefile.in (LIBOCT_PATHSEARCH_CXX_SOURCES): Add it to the list.